# pixi-gui

./: .gitignore  README.md  deny.toml  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.github/workflows/: bump-pixi.yml  ci.yml  enforce-sha.yaml  release.yml
recipe/: recipe.yaml  variants.yaml
scripts/: build_package.py  bump_pixi.py  upload_package.py
src/: routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: editor.rs  error.rs  lib.rs  main.rs  pty.rs  state.rs  utils.rs  watcher.rs  window.rs
src-tauri/src/pixi/workspace/: init.rs  list.rs  mod.rs  remove.rs  search.rs  task.rs  workspace.rs
src-tauri/src/platform/: linux.rs  mod.rs  osx.rs  windows.rs
src/components/common/: aboutDialog.tsx  appMenu.tsx  circularIcon.tsx  header.tsx  preferencesGroup.tsx  sortableRow.tsx
src/components/pixi/: debug.tsx  newWorkspaceDialog.tsx
src/components/pixi/environments/: environment.tsx  environmentDialog.tsx  environments.tsx
src/components/pixi/inspect/: columns.ts  inspect.tsx  packageDialog.tsx  packageRow.tsx
src/components/pixi/manifest/: channelDialog.tsx  condaDependencyDialog.tsx  dependencyVersionDialog.tsx  dependencyVersionPicker.tsx  feature.tsx  featureDialog.tsx  manifest.tsx  platformDialog.tsx  pypiDependencyDialog.tsx
src/components/pixi/process/: commandPreview.tsx  editorDialog.tsx  featureChooserDialog.tsx  processRow.tsx  terminal.tsx
src/components/pixi/tasks/: taskArgsDialog.tsx  taskDialog.tsx
src/components/shadcn/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useProcess.ts  usePty.ts
src/lib/: editor.ts  event.ts  pty.ts  taskArgs.ts  utils.ts
src/lib/pixi/workspace/: list.ts  search.ts  task.ts  workspace.ts
src/routes/workspace.$path/: index.tsx  process.tsx  route.tsx
src/styles/: globals.css
