[package]
edition = "2024"
name = "pixi-gui"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "pixi_gui_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0"
humantime = "2.3.0"
indexmap = "2"
libc = "0.2"
log = "0.4"
miette = "7"
notify = "8"
notify-debouncer-full = "0.7"
percent-encoding = "2"
pixi_api = { package = "pixi_api", git = "https://github.com/prefix-dev/pixi", tag = "v0.71.1" }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1.47" }
uuid = { version = "1.18", features = ["v4"] }
which = "8.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
tao = { version = "0.35.0" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[patch.crates-io]
# Redirect crates.io's `reqwest-middleware` to a local shim that re-exports
# `astral-reqwest-middleware`. This unifies the `Middleware` trait identity
# between consumers that depend on the original crate name (e.g.
# `http-cache-reqwest`) and consumers that depend on the renamed
# `astral-reqwest-middleware` (rattler, rattler-build, uv). pixi's own workspace
# applies this patch, but `[patch]` sections do not propagate through the
# `pixi_api` git dependency, so it has to be repeated here.
reqwest-middleware = { path = "patches/reqwest_middleware_shim" }
tao = { git = "https://github.com/tauri-apps/tao.git", branch = "dev" }
version-ranges = { git = "https://github.com/astral-sh/pubgrub", rev = "d8efd77673c9a90792da9da31b6c0da7ea8a324b" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
